<resources>
    <string name="app_name">My Library</string>
    <string name="book_name">Book Name</string>
    <string name="book_image">Book Image</string>
    <string name="favorite_books_label">Favorite Books</string>
    <string name="currently_reading_books_label">Currently Reading Books</string>
    <string name="want_to_read_books_label">Wishlist</string>
    <string name="already_read_books_label">Already Read Books</string>
    <string name="all_books_label">All Books</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="delete">Delete</string>
    <string name="short_description">Short Description</string>
    <string name="author_text">John Doe</string>
    <string name="author_label">Author:</string>
    <string name="see_all_books_menu_label">See All Books</string>
    <string name="currently_reading_books_menu_label">Currently Reading Books</string>
    <string name="already_read_books_menu_label">Already Read Books</string>
    <string name="your_wishlist_menu_label">Your Wishlist</string>
    <string name="your_favorites_menu_label">Your Favorites</string>
    <string name="about">About</string>
    <string name="footer_copyright">Developed by Joon Hui</string>
    <string name="add_to_reading_button_label">Add to Reading List</string>
    <string name="add_to_wishlist_button_label">Add to Wishlist</string>
    <string name="add_to_already_read_button_label">Add to Already Read</string>
    <string name="add_to_favorites_button_label">Add To Favorites</string>
    <string name="book_name_label">Book Name:</string>
    <string name="book_name_text">This is my Book Name</string>
    <string name="author_sample_text">John Doe</string>
    <string name="pages_label">Pages</string>
    <string name="pages_text">150</string>
    <string name="description_label">Description</string>
    <string name="long_description_text">Long Description</string>
    <string name="book_cover_text">Book Cover</string>
    <string name="add_new_book_activity_label">Add New Book</string>
    <string name="book_name_required">Book Name (required)</string>
    <string name="author_required">Author (required)</string>
    <string name="pages_required">Pages (required)</string>
    <string name="save">Save</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="delete_book">Delete Book</string>
    <string name="edit_book_label">Edit</string>
    <string name="book_cover_url">Book Cover URL</string>
    <string name="is_reading_button_label">Reading</string>
    <string name="is_already_reading_button_label">Already Read</string>
    <string name="is_want_to_read_button_label">Wishlisted</string>
    <string name="is_favorite_button_label">Favorited</string>
</resources>