<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activities.AddEditBookActivity">

        <EditText
            android:id="@+id/editTextBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_name_required"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_required"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pages_required"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextShortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextLongDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/long_description_text"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_cover_url"
            android:inputType="text" />
    </LinearLayout>


</ScrollView>