<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/collapsedRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="200dp"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/book_image"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textBookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBook"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/book_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnDownArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgBook"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_down_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expandedRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/collapsedRelativeLayout"
            android:visibility="gone">

            <TextView
                android:id="@+id/authorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label" />

            <TextView
                android:id="@+id/txtAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/authorText"
                android:text="@string/author_text" />

            <TextView
                android:id="@+id/txtShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAuthor"
                android:layout_marginTop="7dp"
                android:text="@string/short_description" />

            <ImageView
                android:id="@+id/btnUpArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtShortDescription"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/collapse"
                android:src="@drawable/ic_up_arrow" />

        </RelativeLayout>

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>